--- a/kotlin-api/pom.xml
+++ b/kotlin-api/pom.xml
@@ -16,8 +16,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<kotlin.version>1.6.21</kotlin.version>
-		<klint.version>3.1.0</klint.version>
-		<pinterest.klint.version>0.47.1</pinterest.klint.version>
+		<klint.version>1.15.2</klint.version>
+		<mvn.site>3.7.1</mvn.site>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -96,51 +96,23 @@
 				</dependencies>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
+				<groupId>com.github.gantsign.maven</groupId>
+				<artifactId>ktlint-maven-plugin</artifactId>
 				<version>${klint.version}</version>
 				<executions>
 					<execution>
-						<id>mvn ktlint</id>
-						<phase>verify</phase>
-						<configuration>
-							<target name="ktlint">
-								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
-									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
-									<arg value="src/**/*.kt"/>
-									<!-- see ktlint for more information -->
-								</java>
-							</target>
-						</configuration>
+						<id>check</id>
 						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>ktlint-format</id>
-						<configuration>
-							<target name="ktlint">
-								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
-									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
-									<arg value="-F"/>
-									<arg value="src/**/*.kt"/>
-									<!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
-								</java>
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
+							<goal>check</goal>
 						</goals>
 					</execution>
 				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>com.pinterest</groupId>
-						<artifactId>ktlint</artifactId>
-						<version>${pinterest.klint.version}</version>
-					</dependency>
-					<!-- additional 3rd party ruleset(s) can be specified here -->
-				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<!-- ktlint-maven plugin requires maven-site-plugin >= 3.7.0 to work -->
+				<version>${mvn.site}</version>
 			</plugin>
 		</plugins>
 	</build>
